create product failures

--- a/config/locales/products.pt-BR.yml
+++ b/config/locales/products.pt-BR.yml
@@ -1,9 +1,10 @@
 ---
 pt-BR:
-  products:
-    new:
-      title: Cadastro de Produtos
-      submit: Registrar
+  admin:
+    products:
+      new:
+        title: Cadastro de Produtos
+        submit: Registrar
   activerecord:
     models:
       product:
