style para radiobutton

--- a/config/locales/carts.pt-BR.yml
+++ b/config/locales/carts.pt-BR.yml
@@ -5,6 +5,7 @@ pt-BR:
       cart:
         statuses:
           delivered: Pedido Entregue
+          approved: Pedido Realizado
   users:
     carts:
       create:
