--- a/config/locales/carts.pt-BR.yml
+++ b/config/locales/carts.pt-BR.yml
@@ -10,10 +10,9 @@ pt-BR:
     carts:
       create:
         success: Produto adicionado ao carrrinho com sucesso!
-        failure: Obrigatório escolher o frete para adicionar ao carrinho
       update:
         success: Pedido realizado com sucesso!
-        required_shipping: Selecione o frete
+        required_shipping: Obrigatório escolher o frete para adicionar ao carrinho
       index:
         title: Seu Carrinho
         calculate_frete: Calcular frete por CEP
