separado views de devise e user

--- a/config/locales/carts.pt-BR.yml
+++ b/config/locales/carts.pt-BR.yml
@@ -6,7 +6,7 @@ pt-BR:
         statuses:
           delivered: Pedido Entregue
           approved: Pedido Realizado
-  users:
+  user:
     carts:
       create:
         success: Produto adicionado ao carrrinho com sucesso!
