--- a/config/locales/shippings.pt-BR.yml
+++ b/config/locales/shippings.pt-BR.yml
@@ -3,3 +3,5 @@ pt-BR:
   shippings:
     shippings_options:
       required_address: 'Selecione um endereço'
+    index:
+      failure: Não foi possível calcular o frete'
